--- a/index.html
+++ b/index.html
@@ -1,133 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>YouTube Thumbnail Downloader</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    :root {
-      --bg-color: #f9fafb;
-      --text-color: #1f2937;
-      --card-color: #ffffff;
-    }
-    [data-theme='dark'] {
-      --bg-color: #1e293b;
-      --text-color: #f1f5f9;
-      --card-color: #334155;
-    }
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      margin: 0;
-      padding: 20px;
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-    h1 {
-      margin-bottom: 10px;
-    }
-    input {
-      width: 90%;
-      max-width: 500px;
-      padding: 12px;
-      font-size: 16px;
-      border: 2px solid #cbd5e1;
-      border-radius: 10px;
-      margin: 15px 0;
-    }
-    button {
-      padding: 10px 25px;
-      font-size: 16px;
-      background-color: #3b82f6;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin: 5px;
-    }
-    button:hover {
-      background-color: #2563eb;
-    }
-    .thumbnail {
-      margin-top: 25px;
-      animation: fadeIn 0.6s ease-in;
-    }
-    .thumbnail img {
-      width: 100%;
-      max-width: 700px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-    }
-    .download-btn, .channel-btn {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 12px 25px;
-      background-color: #10b981;
-      color: white;
-      border-radius: 10px;
-      text-decoration: none;
-      font-weight: 600;
-    }
-    .download-btn:hover {
-      background-color: #059669;
-    }
-    .channel-btn {
-      background-color: #6366f1;
-    }
-    .channel-btn:hover {
-      background-color: #4f46e5;
-    }
-    .toggle-mode {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: none;
-      border: 2px solid var(--text-color);
-      color: var(--text-color);
-      padding: 5px 10px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>🖼 Get YouTube Thumbnail</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
-<body data-theme="light">
-  <button class="toggle-mode" onclick="toggleTheme()">🌙</button>
-  <h1>YouTube Thumbnail Downloader</h1>
-  <p>Enter YouTube Video URL to get high-resolution thumbnail</p>
-  <input type="text" id="videoUrl" placeholder="Paste YouTube link here" />
-  <br />
-  <button onclick="getThumbnail()">Get Thumbnail</button>
-  <div class="thumbnail" id="thumbnailResult"></div>
-  <br />
-  <a class="channel-btn" href="https://whatsapp.com/channel/0029VacWEfMAYlUJvpt7531g" target="_blank">Join Developer Channel</a>
 
-  <script>
-    function getThumbnail() {
-      const url = document.getElementById('videoUrl').value.trim();
-      const videoId = url.split('v=')[1]?.split('&')[0] || url.split('/').pop();
-      if (!videoId) return alert('Invalid YouTube URL');
+<body>
+    <div class="main fw-light">
+        <header>
+            <h4 class="display-6 lh-1">🖼 Get YouTube Thumbnail</h4>
+        </header>
+        <hr>
+        <label for="url" class="form-label small">Enter YouTube video URL (supports .be, shorts, embed, with timestamps
+            and other clutter)</label>
+        <input name="url" type="search" id="url" class="form-control fw-light"
+            onfocus="if(this.value == 'https://www.youtube.com/watch?v=k8mOAV0KJLE') { this.value = ''; }"
+            onblur="if(this.value == '') { this.value = 'https://www.youtube.com/watch?v=k8mOAV0KJLE'; }"
+            value="https://www.youtube.com/watch?v=k8mOAV0KJLE" />
+        <div class="buttons">
+            <button class="btn btn-primary fw-light" onclick="dynamicUrl(0)">👁‍🗨 Get 🖼</button>
+            <button class="btn btn-info fw-light" onclick="dynamicUrl(1)">👀 Get Max 🖼</button>
+            <button class="btn btn-secondary fw-light" onclick="dynamicUrl(2)">👁 Get Max webp</button>
+            <button class="btn btn-success fw-light" onclick="download()">⏬ Download</button>
+        </div>
 
-      const src = `https://img.youtube.com/vi/${videoId}/maxresdefault.jpg`;
-      const html = `
-        <img src="\${src}" alt="Thumbnail" />
-        <br />
-        <a class="download-btn" href="\${src}" download="thumbnail.jpg">Download Thumbnail</a>
-      `;
-      document.getElementById('thumbnailResult').innerHTML = html;
-    }
+        <img class="center-fit" id="img" onclick="fullPage()" title="Click to zoom in/out"
+            src="https://img.youtube.com/vi/k8mOAV0KJLE/maxresdefault.jpg" />
+        <footer>
+            <a class="text-decoration-none" href="https://github.com/rdavydov/get-yt-thumb" target="_blank"><img
+                    src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='12 12 40 40'%3e%3cpath fill='%23333' d='M32 13.4c-10.5 0-19 8.5-19 19 0 8.4 5.5 15.5 13 18 1 .2 1.3-.4 1.3-.9v-3.2c-5.3 1.1-6.4-2.6-6.4-2.6-.9-2.1-2.1-2.7-2.1-2.7-1.7-1.2.1-1.1.1-1.1 1.9.1 2.9 2 2.9 2 1.7 2.9 4.5 2.1 5.5 1.6.2-1.2.7-2.1 1.2-2.6-4.2-.5-8.7-2.1-8.7-9.4 0-2.1.7-3.7 2-5.1-.2-.5-.8-2.4.2-5 0 0 1.6-.5 5.2 2 1.5-.4 3.1-.7 4.8-.7 1.6 0 3.3.2 4.7.7 3.6-2.4 5.2-2 5.2-2 1 2.6.4 4.6.2 5 1.2 1.3 2 3 2 5.1 0 7.3-4.5 8.9-8.7 9.4.7.6 1.3 1.7 1.3 3.5v5.2c0 .5.4 1.1 1.3.9 7.5-2.6 13-9.7 13-18.1 0-10.5-8.5-19-19-19z'/%3e%3c/svg%3e"
+                    alt="GitHub" /> @rdavydov/get-yt-thumb</a>
+        </footer>
+    </div>
+    <div id="fullpage" title="Click to zoom in/out" onclick="this.style.display='none';"></div>
 
-    function toggleTheme() {
-      const body = document.body;
-      const current = body.getAttribute('data-theme');
-      body.setAttribute('data-theme', current === 'dark' ? 'light' : 'dark');
-    }
-  </script>
+    <script src="script.js"></script>
 </body>
+
 </html>
